Debugged sizing issues on tablet mobile

--- a/Code/sass/layouts/_layoutsmenupage.scss
+++ b/Code/sass/layouts/_layoutsmenupage.scss
@@ -50,6 +50,14 @@
         @include row;
         align-items: center;
         justify-content: space-around;
+        @include tablet-only {
+            margin-left: 30px;
+            margin-right: 20px;
+        }
+        @include mobile-only {
+            @include mobile-margins-menu;
+            justify-content: space-between;
+        }
     }
     .fa-heart {
         font-size: 30px;
@@ -61,7 +69,7 @@
 
 .restaurantmenuwrapper {
     background-color: $background-light;
-    height: 1300px;
+    height: 1265px;
     margin-top: -25px;
     .dishtype__heading {
         display: flex;
@@ -146,7 +154,9 @@
 .footer {
     .footer__logo {
         font-family: $shrikhand;
-        font-size: 37.5px;
+        font-size: 35px;
+        margin-top: 15px;
+        margin-bottom: 15px;
         @include mobile-only {
             padding: 10px 0px 20px 35px;
             height: 10px;
@@ -158,7 +168,6 @@
 }
 
 //footer items 
-
 .fa-ul {
     margin-top: 0px;
 }
